--- a/guide.html
+++ b/guide.html
@@ -44,8 +44,8 @@
             allowfullscreen
           ></iframe>
           <p>
-            Its's a big donut. Takes a while to make but looks fantastic and can
-            be easily transformed into whatever you want.
+            Its's a crazy metallic donut. It took a while to make but looks fantastic and can
+            be easily transformed into different designs.
           </p>
         </div>
       </div>
@@ -64,8 +64,8 @@
           ></iframe>
           <p>
             The tutorial is outdated at parts and requires some searching
-            through the comments to find a solution, but looks amazing when
-            finished. Cant customise much except the colour.
+            through the comments to find a solution, but it looks amazing when
+            finished. 
           </p>
         </div>
       </div>
@@ -117,9 +117,8 @@
           <p>
             This one took ages to finish. But the end result is a very versatile
             and customisable room setup. I think the couch was the biggest
-            challenge. The creation, lighting and framing of the room is the
-            important technique but the furniture can be easily substituted
-            easily.
+            challenge. The lighting and framing of the room is the
+            take-away technique and the furniture can be easily substituted.
           </p>
         </div>
       </div>
@@ -133,21 +132,15 @@
       <table class="sitemap">
         <tr>
           <th><a href="index.html">Index</a></th>
-          <th><a href="Artworks.html">Gallery</a></th>
           <th><a href="Aboutme.html">About Me</a></th>
+          <th><a href="Artworks.html">Gallery</a></th>
           <th><a href="guide.html">Guidebook</a></th>
           <th><a href="contact.html">Contact</a></th>
         </tr>
         <tr>
           <td></td>
+          <td><a href="sourcelog.html">Source Log</a> <br></td>
           <td></td>
-          <td>
-            <a href="assignment.html">Assignment</a> <br>
-            <a href="sourcelog.html">Source Log</a> <br>
-            <a href="sitemap.html">Site Map</a><br>
-            <a href="reflection.html">Reflections</a><br>
-            <a href="validation.html">Validation</a>
-          </td>
           <td></td>
           <td></td>
         </tr>
