--- a/index.html
+++ b/index.html
@@ -60,19 +60,15 @@ a, a:link, a:visited{
   <table class="sitemap">
   <tr>
     <th><a href="index.html">Index</a></th>
-    <th><a href="Artworks.html">Gallery</a></th>
     <th><a href="Aboutme.html">About Me</a></th>
+    <th><a href="Artworks.html">Gallery</a></th>
     <th><a href="guide.html">Guidebook</a></th>
-    <th><a href="feedback.html">Contact</a></th>
+    <th><a href="contact.html">Contact</a></th>
   </tr>
   <tr>
     <td></td>
+    <td><a href="sourcelog.html">Source Log</a> <br></td>
     <td></td>
-    <td><a href="assignment.html">Assignment</a> <br>
-      <a href="sourcelog.html">Source Log</a> <br>
-      <a href="sitemap.html">Site Map</a>
-    <br><a href="reflection.html">Reflections</a><br>
-    <a href="validation.html">Validation</a></td>
     <td></td>
     <td></td>
   </tr>
