--- a/Aboutme.html
+++ b/Aboutme.html
@@ -34,10 +34,10 @@
       <br>
       <h2>About Me</h2>
       <p style="padding-bottom: 60px">
-        Hello! My name is Tom Studley. I'm originally from Sydney's Inner West
+        Hello! My name is Tom Studley. I'm grew up in Sydney's Inner West
         in Australia, now studying psychology at the Australian National
-        University in Canberra. One of my favourite past-times is getting lost
-        in the worlds of fantasy and sci-fi novels, movies and games. I have a
+        University. One of my favourite past-times is getting lost
+        in the worlds of fantasy and sci-fi novels, movies and games. I have gained a
         deep appreciation for the immersive capability of computer graphics. It
         is my dream to be able to render fantastic, new worlds that others can
         experience.
@@ -45,12 +45,22 @@
 
       <h2>My Passion</h2>
       <p class="bodylink">
+        On the <a href="Artworks.html">Gallery</a> page, you can view personal projects that I have created using the program Blender. (some may be labelled placeholders)</p> 
+      <figure>
+        <img
+          src="./Images/maccastv.png"
+          alt="maccastvimage"
+          style="width: 50vw; height: auto"
+        >
+        <figcaption>A recent personal project</figcaption>
+      </figure>
+      <p class="bodylink">
         <a href="blender.org">Blender</a> is a 3D creative software that allows
         modelling, rigging, animation, simulation, rendering, compositing,
         motion tracking, and much more. Blender is the go-to for beginners in 3D
         graphics. It serves as an all-purpose, artistic and professional design
         medium. It is also completely free, open source, and has a more flexible
-        and beginner-friendly interface than comparable software.
+        and beginner-friendly interface than comparable software like Maya. 
       </p>
 
       <figure>
@@ -64,17 +74,10 @@
       </figure>
 
       <p class="bodylink">
-        My website is designed specifically as a platform for learners and
+        My website is as a platform for learners and
         general users of Blender. Specifically, it is for those who want to
         discovering interesting elements and techniques that they can apply in
-        their own projects, and perhaps also learn skills while doing so. Often
-        learners are forced to scour through algorithms on YouTube or forums to
-        find tutorials that explain each step thoroughly enough for their
-        understanding. Furthermore, many of the well-known beginner-friendly
-        tutorials are simply boring, as the end goal is to learn, rather than
-        create something cool. I personally do not resonate with this approach,
-        and I think that people are more likely to actively learn when they are
-        fulfilling a goal that they find creatively stimulating.
+        their own projects, and perhaps also learn skills while doing so. 
       </p>
 
       <figure>
@@ -87,12 +90,10 @@
       </figure>
 
       <p class="bodylink">
-        This website  contains a compilation ofhand-picked beginner-friendly tutorials where the objective is to
-        encourage creativity. For example, you could spend 10 hours following an
-        ad-filled, learner-focused tutorial course on creating a regular glazed
+        The <a href="guide.html">Guidebook</a> contains a compilation of hand-picked beginner-friendly tutorials where the objective is to
+        inspire creativity. I believe that the best way to learn is as consequence of doing something you enjoy, rather than for its own sake. You could bore yourself following a 10 hour, ad-filled tutorial course to create a regular glazed
         donut, or you could spend a few hours creating this awesome wireframe
-        donut, which you can immediately edit and play around with in your own
-        scenes.
+        donut.
       </p>
       <figure>
         <iframe
@@ -105,31 +106,16 @@
         ></iframe>
       </figure>
       <p class="bodylink">
-        Each postincludes my own description of the element, and an
+        Each post includes my own description of the element, and an
         embedded link to the tutorial. In the same way that you might prefer
         listening to somebody else’s hand-picked music playlist rather than wade
         through popular music recommended by an algorithm, users might like my
-        style and want to stick around. Unlike a Youtube playlist, I can
-        communicate and discuss with viewers. This is found on the
-        <a href="guide.html">Guidebook</a> page.
+        style and want to stick around.</p>
       <br>
       <br>
-      <p class="bodylink">
-        I am also be displaying my own projects on the
-        <a href="Artworks.html">Gallery</a> page. This is not only for my own
-        display but also to present to viewers the kind of content they can
-        expect in my guidebook.
-      <figure>
-        <img
-          src="./Images/maccastv.png"
-          alt="maccastvimage"
-          style="width: 50vw; height: auto"
-        >
-        <figcaption>A recent personal project</figcaption>
-      </figure>
       <p class="bodylink" style="padding-bottom: 60px">
         Thanks for reading and be sure to follow and share my work through the
-        social media feed below or via the buttons in the
+        social media via the social media buttons in the
         <a href="index.html">Index</a>! Please get in touch on the
         <a href="contact.html">Contact</a> form if you have any questions,
         requests, or constructive feedback.
@@ -142,27 +128,8 @@
       <br>
       <br>
 
-      <h2>Links for Assignment Pages for COMP1710</h2>
-      <h3>Link to Assignments page:</h3>
-      <a href="assignment.html">Assignments</a>
-      <br>
-      <br>
-      <h3>Link to Source Log page:</h3>
+      
       <a href="sourcelog.html">Source Log</a>
-      <br>
-      <br>
-      <h3>Link to Site Map page:</h3>
-      <a href="sitemap.html">Site Map</a>
-      <br>
-      <br>
-      <h3>Link to Reflections page:</h3>
-      <a href="reflection.html">Reflections</a>
-      <br>
-      <br>
-      <h3>Link to Validation page:</h3>
-      <a href="validation.html">Validation</a>
-      <br>
-      <br>
       <br>
     </div>
     <!-- sitemap not inluded in content div -->
@@ -170,21 +137,15 @@
       <table class="sitemap">
         <tr>
           <th><a href="index.html">Index</a></th>
-          <th><a href="Artworks.html">Gallery</a></th>
           <th><a href="Aboutme.html">About Me</a></th>
+          <th><a href="Artworks.html">Gallery</a></th>
           <th><a href="guide.html">Guidebook</a></th>
           <th><a href="contact.html">Contact</a></th>
         </tr>
         <tr>
           <td></td>
+          <td><a href="sourcelog.html">Source Log</a> <br></td>
           <td></td>
-          <td>
-            <a href="assignment.html">Assignment</a> <br>
-            <a href="sourcelog.html">Source Log</a> <br>
-            <a href="sitemap.html">Site Map</a><br>
-            <a href="reflection.html">Reflections</a><br>
-            <a href="validation.html">Validation</a>
-          </td>
           <td></td>
           <td></td>
         </tr>
