--- a/Aboutme.html
+++ b/Aboutme.html
@@ -34,10 +34,10 @@
       <br>
       <h2>About Me</h2>
       <p style="padding-bottom: 60px">
-        Hello! My name is Tom Studley. I'm grew up in Sydney's Inner West
+        Hello! My name is Tom Studley. I grew up in Sydney's Inner West
         in Australia, now studying psychology at the Australian National
         University. One of my favourite past-times is getting lost
-        in the worlds of fantasy and sci-fi novels, movies and games. I have gained a
+        in the worlds of fantasy and sci-fi media. I have gained a
         deep appreciation for the immersive capability of computer graphics. It
         is my dream to be able to render fantastic, new worlds that others can
         experience.
