--- a/Aboutme.html
+++ b/Aboutme.html
@@ -34,10 +34,10 @@
       <br>
       <h2>About Me</h2>
       <p style="padding-bottom: 60px">
-        Hello! My name is Tom Studley. I grew up in Sydney's Inner West
+        Hello! My name is Tom Studley. I'm grew up in Sydney's Inner West
         in Australia, now studying psychology at the Australian National
         University. One of my favourite past-times is getting lost
-        in the worlds of fantasy and sci-fi media. I have gained a
+        in the worlds of fantasy and sci-fi novels, movies and games. I have gained a
         deep appreciation for the immersive capability of computer graphics. It
         is my dream to be able to render fantastic, new worlds that others can
         experience.
@@ -45,7 +45,7 @@
 
       <h2>My Passion</h2>
       <p class="bodylink">
-        On the <a href="Artworks.html">Gallery</a> page, you can view personal projects that I have created using the program Blender. (some may be labelled placeholders)</p> 
+        On the <a href="Artworks.html">Gallery</a> page, you can view my personal projects created using the program Blender (some are labelled placeholders).</p> 
       <figure>
         <img
           src="./Images/maccastv.png"
@@ -60,24 +60,7 @@
         motion tracking, and much more. Blender is the go-to for beginners in 3D
         graphics. It serves as an all-purpose, artistic and professional design
         medium. It is also completely free, open source, and has a more flexible
-        and beginner-friendly interface than comparable software like Maya. 
-      </p>
-
-      <figure>
-        <a href="https://www.blender.org/"
-          ><img
-            src="./Images/blender_logo.png"
-            alt="blenderlogo"
-            style="width: 300px; height: auto"
-        ></a>
-        <figcaption>Blender's official logo</figcaption>
-      </figure>
-
-      <p class="bodylink">
-        My website is as a platform for learners and
-        general users of Blender. Specifically, it is for those who want to
-        discovering interesting elements and techniques that they can apply in
-        their own projects, and perhaps also learn skills while doing so. 
+        and beginner-friendly interface than comparable software like Maya.
       </p>
 
       <figure>
@@ -90,28 +73,12 @@
       </figure>
 
       <p class="bodylink">
-        The <a href="guide.html">Guidebook</a> contains a compilation of hand-picked beginner-friendly tutorials where the objective is to
-        inspire creativity. I believe that the best way to learn is as consequence of doing something you enjoy, rather than for its own sake. You could bore yourself following a 10 hour, ad-filled tutorial course to create a regular glazed
+        The <a href="guide.html">Guidebook</a> contains a compilation of hand-picked beginner-friendly Blender tutorials where the objective is to
+        inspire creativity. I believe that the best way to learn is by doing something you enjoy. You could bore yourself following a 10 hour, ad-filled tutorial course to create a regular glazed
         donut, or you could spend a few hours creating this awesome wireframe
-        donut.
+        donut. I hope that users will use these videos to draw inspiration for their own personal projects.
       </p>
-      <figure>
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/NGV5GDMz6oA"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-      </figure>
-      <p class="bodylink">
-        Each post includes my own description of the element, and an
-        embedded link to the tutorial. In the same way that you might prefer
-        listening to somebody else’s hand-picked music playlist rather than wade
-        through popular music recommended by an algorithm, users might like my
-        style and want to stick around.</p>
-      <br>
+
       <br>
       <p class="bodylink" style="padding-bottom: 60px">
         Thanks for reading and be sure to follow and share my work through the
