--- a/guide.html
+++ b/guide.html
@@ -44,7 +44,7 @@
             allowfullscreen
           ></iframe>
           <p>
-            Its's a crazy metallic donut. It took a while to make but looks fantastic and can
+            It's a crazy metallic donut. It took a while to make, but looks fantastic and can
             be easily transformed into different designs.
           </p>
         </div>
